--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
   
   /* Common Section Styling */
   section {
-    padding-top: 2rem;
+    padding: 2rem;
     max-width: 900px;
     margin: 0 auto;
     text-align: center;
