Updated open new tab on link click and some word detail changes

--- a/style.css
+++ b/style.css
@@ -373,6 +373,7 @@ section {
         }
     
         .director, .festival {
+          padding-top: 0.75rem;
           font-size: 0.85rem;
           color: #555;
         }
