--- a/style.css
+++ b/style.css
@@ -456,7 +456,7 @@ transform-origin: top center;
 
 /* -------- NAVIGATION SECTION ---------- */
 
-.navigate-section {
+/* .navigate-section {
   padding: 3rem 1rem;
   background-color: #ffffff;
   text-align: center;
@@ -486,7 +486,7 @@ transform-origin: top center;
 
 .nav-box img {
   width: 100%;
-  height: 200px; /* or whatever height you want */
+  height: 200px; or whatever height you want
   object-fit: cover;
   display: block;
 }
@@ -501,7 +501,7 @@ transform-origin: top center;
 .nav-box:hover {
   transform: scale(1.05);
   box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-}
+} */
 
 /* Contact Section */
 #contact {
